# MidTerm_LaneDetection

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md
Output/: 1edge-2019-05-22_17.43.58.mkv  2roi-2019-05-22_17.46.08.mkv  LaneDetector.avi
app/: .CMakeLists.txt.swp  .ReadAndDisplay.cpp.swp  .edgeDetector.cpp.swp  .lineFitting.cpp.swp  .main.cpp.swo  .main.cpp.swp  .roiMaskSelection.cpp.swp  @  CMakeLists.txt  Hsv.cpp  LaneDetector.cpp  LanePredictor.cpp  ReadAndDisplay.cpp  detectYellow.cpp  edgeDetector.cpp  houghTransform (copy).cpp  houghTransform.cpp  hsvThreshold.cpp  hsvThresholdW.cpp  hsvThresholdY.cpp  lineFitting.cpp  main.cpp  morph.cpp  plotPolygon.cpp  predictTurn.cpp  predictTurnNew.cpp  predictTurnOld.cpp  readFrame.cpp  readvideo.cpp  roiMaskSelection.cpp  wrongLanePredictor.cpp
app/app/: edgeDetector.cpp  hsvThreshold.cpp  hsvThresholdW.cpp  main.cpp  roiMaskSelection.cpp
docs/: doxygen_config
docs/html/: LaneDetector_8hpp_source.html  LanePredictor_8hpp_source.html  annotated.html  classLaneDetector-members.html  classLaneDetector.html  classLaneDetector__coll__graph.map  classLaneDetector__coll__graph.md5  classLaneDetector__inherit__graph.dot  classLaneDetector__inherit__graph.map  classLaneDetector__inherit__graph.md5  classLanePredictor-members.html  classLanePredictor.html  classLanePredictor__coll__graph.dot  classLanePredictor__coll__graph.md5  classLanePredictor__inherit__graph.map  classes.html  detectYellow_8cpp.html  detectYellow_8cpp__incl.dot  detectYellow_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  edgeDetector_8cpp.html  edgeDetector_8cpp__incl.dot  edgeDetector_8cpp__incl.md5  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  houghTransform_8cpp.html  houghTransform_8cpp__incl.dot  houghTransform_8cpp__incl.md5  hsvThresholdY_8cpp.html  hsvThresholdY_8cpp__incl.dot  hsvThresholdY_8cpp__incl.md5  index.html  inherit_graph_0.dot  (+25 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  searchdata.js
docs/latex/: annotated.tex  classLaneDetector.tex  classLaneDetector__inherit__graph.dot  classLaneDetector__inherit__graph.md5  classLanePredictor.tex  classLanePredictor__coll__graph.dot  classLanePredictor__inherit__graph.md5  detectYellow_8cpp.tex  detectYellow_8cpp.tex.tmp  detectYellow_8cpp__incl.dot  detectYellow_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_d422163b96683743ed3963d4aac17747.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  edgeDetector_8cpp.tex  edgeDetector_8cpp__incl.dot  edgeDetector_8cpp__incl.md5  files.tex  hierarchy.tex  houghTransform_8cpp.tex  houghTransform_8cpp__incl.dot  houghTransform_8cpp__incl.md5  hsvThresholdY_8cpp.tex  hsvThresholdY_8cpp__incl.dot  hsvThresholdY_8cpp__incl.md5  lineFitting_8cpp.tex  lineFitting_8cpp__incl.dot  lineFitting_8cpp__incl.md5  plotPolygon_8cpp.tex  plotPolygon_8cpp__incl.dot  plotPolygon_8cpp__incl.md5  predictTurn_8cpp.tex  predictTurn_8cpp__incl.dot  predictTurn_8cpp__incl.md5  readFrame_8cpp.tex  readFrame_8cpp__incl.dot  readFrame_8cpp__incl.md5  refman.tex  roiMaskSelection_8cpp.tex  roiMaskSelection_8cpp__incl.dot  (+7 more)
include/: .LaneDetector.hpp.swp  .LanePredictor.hpp.swp  .ReadAndDisplay.hpp.swp  LaneDetector.hpp  LanePredictor.hpp  ReadAndDisplay.hpp
results/: Valgrind Output.txt  cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  LaneDetectorTest.cpp  LanePredictorTest.cpp  ReadandDisplayTest.cpp  mainTest.cpp  test.cpp
